tdf#127864 - Export custom document properties using utf8 text encoding

Change-Id: Iaca1f9251e87ec199b55888c1ab6421a654d1f9f